Bug 462693 - select all and copy disabled/enabled incorrectly after focus change
Summary: select all and copy disabled/enabled incorrectly after focus change
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.9.6
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-06 09:29 UTC by discut
Modified: 2024-07-21 15:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.10.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description discut 2022-12-06 09:29:11 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. compare two documents
2. select all, either from Edit menu or Ctrl+A in one of the documents
3. try copying by Ctrl+C or by Ctrl+Ins

OBSERVED RESULT
The Copy icon in tool bar is unclickable.
Ctrl+V doesn't paste 
Shift+Ins doesn't paste

EXPECTED RESULT
Well, obviously - paste the copied text :)

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 michael 2023-06-02 15:05:36 UTC
Observed that focus can be on the file name field while still having the selection visible in the diff window. Looks like the source of this issue.
Comment 2 michael 2023-09-24 17:05:19 UTC
Looks focus changes in general were not handled correct. This became more evident switching  between kdiff3 and the debugger.  Availability of actions will now update after Qt completes the focus the change.
Comment 3 michael 2023-09-24 17:18:41 UTC
Git commit a7bf6ccedafbbcbd1e005c22c6d24fbf536eefcd by Michael Reeves.
Committed on 24/09/2023 at 19:12.
Pushed by mreeves into branch '1.10'.

Delay updateAvailabilities until focus change is competed
FIXED-IN:1.10.6

M  +3    -1    src/kdiff3.cpp

https://invent.kde.org/sdk/kdiff3/-/commit/a7bf6ccedafbbcbd1e005c22c6d24fbf536eefcd
Comment 4 michael 2023-09-24 17:19:13 UTC
Git commit f6aca74944482c1bf5f2df653945a2fb5d2bf660 by Michael Reeves.
Committed on 24/09/2023 at 19:18.
Pushed by mreeves into branch 'master'.

Delay updateAvailabilities until focus change is competed
FIXED-IN:1.10.6

M  +3    -1    src/kdiff3.cpp

https://invent.kde.org/sdk/kdiff3/-/commit/f6aca74944482c1bf5f2df653945a2fb5d2bf660