Delay updateAvailabilities until focus change is competed

BUG:462693
FIXED-IN:1.10.6